saco las / de las imagenes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         
         <footer>
-            <img src="/imagenes/logo-blanco.png">
+            <img src="imagenes/logo-blanco.png">
             <p class="copyright">&copy Copyrigth Barberia Alura - 2020</p>
         </footer>
     </body>
