modifico contactos.html

--- a/productos.html
+++ b/productos.html
@@ -11,17 +11,18 @@
 <body>
     <header>
         <div class="caja">
-            <h1><img src="imagenes/logo.png"></h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
+            <h1><img class="imgheader" src="imagenes/logo.png"></h1>
         </div>
-
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
+    
     <main>
         <ul class="productos">
             <li>
