--- a/contacto.html
+++ b/contacto.html
@@ -13,19 +13,19 @@
 
 <body>
 
+    <img id="banner" src="imagenes/banner.jpg">
     <header>
         <div class="caja">
-            <h1><img class="imgheader" src="imagenes/logo.png"></h1>
+
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
-
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
 
     <h1>PARA MAS INFORMACION CONTACTE AL ADMINISTRADOR</h1>
     <h2>Al TEL 0358-3555666</h2>
