--- a/productos.html
+++ b/productos.html
@@ -9,19 +9,20 @@
 </head>
 
 <body>
+    <img id="banner" src="imagenes/banner.jpg">
     <header>
         <div class="caja">
-            <h1><img class="imgheader" src="imagenes/logo.png"></h1>
-        </div>
-    </header>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+
+    </header>
     
     <main>
         <ul class="productos">
