--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
 
-    <img id="banner" src="imagenes/banner.jpg">
+    <img class="banner" src="imagenes/banner.jpg">
     <header>
         <div class="caja">
 
@@ -28,37 +29,53 @@
         </div>
     </header>
 
-    <div class="principal">
+    <main>
+        <section class="principal">
 
-        <h2 class="titulo-centralizado">Sobre la Barbería Alura</h2>
+            <h2 class="titulo-principal">Sobre la Barbería Alura</h2>
 
-        <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de
-            mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista
-            nuevos clientes diariamente.</p>
+            <img src="imagenes/utensilios.jpg" alt="utensolios de un barbero" class="utensilios">
 
-        <p id="mision"><em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros
-                    clientes"</strong>.</em></p>
+            <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de
+                mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y
+                conquista
+                nuevos clientes diariamente.</p>
 
-        <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el
-            mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un
-            padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
+            <p id="mision"><em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros
+                        clientes"</strong>.</em></p>
 
-    </div>
+            <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el
+                mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un
+                padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
 
-    <div class="diferenciales">
+        </section>
 
-        
+        <section class="mapa">
+            <h3 class="titulo-principal"> Nuestra Ubicacion</h3>
+            <p>Nuestro establecimiento esta en el corazon de la ciudad</p>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3656.428977995002!2d-46.63605992388308!3d-23.588943462607546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scaelum%20alura!5e0!3m2!1ses-419!2sar!4v1706576400780!5m2!1ses-419!2sar"
+                width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-        <ul class="tipo-atencion">
-            <li class="items">Atención personalizada a los clientes</li>
-            <li class="items">Espacio diferenciado</li>
-            <li class="items">Localización</li>
-            <li class="items">Profesesionales calificados</li>
-        </ul>
-        <br><br>
-        <img src="imagenes/diferenciales.jpg" class="imagenDiferenciales">
+        </section>
 
-    </div>
+        <section class="diferenciales">
+
+            <h3 class="titulo-principal">Diferenciales</h3>
+
+            <ul class="tipo-atencion">
+                <li class="items">Atención personalizada a los clientes</li>
+                <li class="items">Espacio diferenciado</li>
+                <li class="items">Localización</li>
+                <li class="items">Profesesionales calificados</li>
+            </ul>
+            <br><br>
+            <img src="imagenes/diferenciales.jpg" class="imagenDiferenciales">
+
+        </section>
+
+    </main>
 
     <footer>
         <img src="imagenes/logo-blanco.png">
