--- a/index.html
+++ b/index.html
@@ -53,10 +53,14 @@
         <section class="mapa">
             <h3 class="titulo-principal"> Nuestra Ubicacion</h3>
             <p>Nuestro establecimiento esta en el corazon de la ciudad</p>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3656.428977995002!2d-46.63605992388308!3d-23.588943462607546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scaelum%20alura!5e0!3m2!1ses-419!2sar!4v1706576400780!5m2!1ses-419!2sar"
-                width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            <div class="mapa-contenido">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3656.428977995002!2d-46.63605992388308!3d-23.588943462607546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scaelum%20alura!5e0!3m2!1ses-419!2sar!4v1706576400780!5m2!1ses-419!2sar"
+                    width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            </div>
 
         </section>
 
@@ -64,16 +68,26 @@
 
             <h3 class="titulo-principal">Diferenciales</h3>
 
-            <ul class="tipo-atencion">
-                <li class="items">Atención personalizada a los clientes</li>
-                <li class="items">Espacio diferenciado</li>
-                <li class="items">Localización</li>
-                <li class="items">Profesesionales calificados</li>
-            </ul>
-            <br><br>
-            <img src="imagenes/diferenciales.jpg" class="imagenDiferenciales">
+            <div class="contenido-diferenciales">
+                <ul class="lista-diferenciales">
+                    <li class="items">Atención personalizada a los clientes</li>
+                    <li class="items">Espacio diferenciado</li>
+                    <li class="items">Localización</li>
+                    <li class="items">Profesesionales calificados</li>
+                    <li class="items">Puntualidad</li>
+                    <li class="items">Limpieza</li>
+                </ul><img src="imagenes/diferenciales.jpg" class="imagen-diferenciales">
+            </div>
 
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=mRBl1flPllQ9EqFO"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
         </section>
+
+
 
     </main>
 
